@@ -55,7 +55,7 @@ field names and values.
 """
 
 from __future__ import generators
-import re, gzip, os, binascii
+import re, gzip, os, binascii, codecs
 import log, Globals, rpath, Time, robust, increment, static, rorpiter
 
 class ParsingError(Exception):
@@ -376,16 +376,18 @@ class FlatFile:
 			compress = 1
 		if mode == 'r':
 			self.rp = rp_base
-			self.fileobj = self.rp.open("rb", compress)
+			self.fileobj = rpath.UnicodeFile(self.rp.open("rb", compress))
 		else:
 			assert mode == 'w'
 			if compress and check_path and not rp_base.isinccompressed():
 				def callback(rp): self.rp = rp
-				self.fileobj = rpath.MaybeGzip(rp_base, callback)
+				self.fileobj = rpath.UnicodeFile(rpath.MaybeGzip(rp_base,
+												callback))
 			else:
 				self.rp = rp_base
 				assert not self.rp.lstat(), self.rp
-				self.fileobj = self.rp.open("wb", compress = compress)
+				self.fileobj = rpath.UnicodeFile(self.rp.open("wb", 
+												compress = compress))
 
 	def write_record(self, record):
 		"""Write a (text) record into the file"""
